fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding changes befor rebasing complex
+	This changes are from the feature branch bigtrouble.
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some interesting text
+			Just nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
