--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	This changes are from the feature branch bigtrouble.
+	Some silly changes from mastewr branch.
 -->
 <head>
-	<title>Lots of Trouble</title>
+	<title>Silly changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just nothing but trouble
+			Just silly changes
 		</p>
 	</main>
 	<footer class="container">
