Done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.Training
 -->
 <head>
-	<title>Silly changes</title>
+	<title>Updating Title For Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
